--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.19.2"
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "postgres": "3.4.4"
   },
   "devDependencies": {
     "standard": "17.1.0"
